--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cloudinary": "^1.37.1",
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "streamifier": "^0.1.1"
   }
 }
