--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.37.1",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1"
   }
