--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,9 @@
 CLOUDINARY_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
+
+POSTGRES_DB=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+
+MONGO_URI_STRING=
